--- a/skeleton/app/views/static_pages/index.html.erb
+++ b/skeleton/app/views/static_pages/index.html.erb
@@ -1,4 +1,5 @@
 <h1>It's hard feeding the walrus</h1>
-<div id='content'></div>
+<div id="content"></div>
+<div id="subview"></div>
 
 <script></script>
